--- a/OtelMvcProject/hotels-starter/index.html
+++ b/OtelMvcProject/hotels-starter/index.html
@@ -9,7 +9,7 @@ Author URL: http://w3layouts.com
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Hotels a Hotels Category Responsive Web Template | Home : W3layouts</title>
+    <title>MVC Otel Projesi & Hoş Geldiniz!</title>
 
     <link href="//fonts.googleapis.com/css?family=Spartan:400,500,600,700,900&display=swap" rel="stylesheet">
 
